--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@tauri-apps/plugin-opener": "^2",
     "@types/dompurify": "^3.2.0",
     "dompurify": "^3.3.1",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.0.3",
     "@types/react": "^19.1.8",
