--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,4 +34,5 @@ rusqlite = { version = "0.31", features = ["bundled"] }
 reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
 base64 = "0.22"
 thiserror = "1.0"
+regex = "1.12.2"
 
