--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "build:win": "tauri build --target x86_64-pc-windows-gnu",
+    "build:prod":"tauri build"  
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.1",
