--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,4 +35,5 @@ reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
 base64 = "0.22"
 thiserror = "1.0"
 regex = "1.12.2"
+tokio = { version = "1", features = ["full"] }
 
