--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,4 +36,9 @@ base64 = "0.22"
 thiserror = "1.0"
 regex = "1.12.2"
 tokio = { version = "1", features = ["full"] }
+# 用于加密
+aes-gcm = "0.10"
+rand = "0.8"
+# 用于测试
+tempfile = "3.10"
 
