--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,14 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 # 用于 EPUB 解析
 epub = "2.1.0"
+# 用于 HTML 解析
+scraper = "0.17"
+# 用于编码检测和转换
+encoding_rs = "0.8"
+# 用于 Markdown 解析
+pulldown-cmark = "0.9"
+# 用于 PDF 解析
+pdf-extract = "0.7"
 # 用于 SQLite
 rusqlite = { version = "0.31", features = ["bundled"] }
 # 用于 HTTP 请求 (Rust侧)
@@ -43,4 +51,8 @@ rand = "0.8"
 sha2 = "0.10"
 # 用于测试
 tempfile = "3.10"
+# 用于时间处理
+chrono = { version = "0.4", features = ["serde"] }
+# 用于 HTML 转义
+html-escape = "0.2"
 
