--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "deep-reader",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Deep Reader - Immersive Reading & Knowledge Management Tool",
+  "author": "Deep Reader Team",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -21,9 +23,12 @@
     "@tauri-apps/plugin-opener": "^2",
     "@types/dompurify": "^3.2.0",
     "dompurify": "^3.3.1",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.562.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^16.5.3",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0"
   },
